force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Step Father</fullName>
                </value>
                <value>
                    <fullName>Step Mother</fullName>
                </value>
                <value>
                    <fullName>Other Legal Guardian</fullName>
                </value>
                <value>
                    <fullName>Next of Kin</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Other Relative</fullName>
                </value>
                <value>
                    <fullName>Teacher/Tutor</fullName>
                </value>
                <value>
                    <fullName>Personal Assistant</fullName>
                </value>
                <value>
                    <fullName>Domestic Helper</fullName>
                </value>
                <value>
                    <fullName>Local Emergency Contact</fullName>
                </value>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Trigger_Parent_User_Creation__c</fullName>
        <formula>IF(AND(RecordType.Name = &quot;Additional Parent&quot;, User__c = &quot;&quot;, LastName &lt;&gt; &quot;NULL!&quot;, Main_Parent_File__r.Starting_Date__c &lt;= TODAY()+31, OR(Family_Status__c = &quot;In School&quot;, Family_Status__c = &quot;Future Enrolment&quot;)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Trigger Parent User Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_UID__c</fullName>
        <description>The UID of the contact used in School Kompanion (BEN 01/06/2017: use of this field will slowly be phased out to be replaced by the external ID in the Staff_Member_Parent_Number__c field)</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Contact UID (Old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_User_LocaleSidKey__c</fullName>
        <formula>Main_Parent_File__r.User_LocaleSidKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact User LocaleSidKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_User_Locale__c</fullName>
        <formula>Main_Parent_File__r.User_Locale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact User Locale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_User_School_Hub_Video_Link__c</fullName>
        <formula>CASE(SchoolText__c, &quot;The British School of Guangzhou&quot;, &quot;http://www.bsg.org.cn/en/visual-tour/school-hub-video.aspx&quot;, &quot;The British School of Nanjing&quot;, &quot;http://www.bsn.org.cn/en/en/visual-tour/school-hub-video.aspx&quot;, &quot;The British School of Marbella&quot;, &quot;http://www.bsm.org.es/en/visual-tour/school-hub-video.aspx&quot;, &quot;The British School of Navarra&quot;, &quot;http://www.bsn.org.es/en/visual-tour/school-hub-video.aspx&quot;, &quot;The British School of Tashkent&quot;, &quot;http://www.britishschool.uz/en/visual-tour/school-hub-video.aspx&quot;, &quot;The British College of Brazil&quot;, &quot;http://www.britishcollegebrazil.org/en/visual-tour/school-hub-video.aspx&quot;, &quot;The British International School of Kuala Lumpur&quot;, &quot;http://www.britishschool.edu.my/en/visual-tour/school-hub-video.aspx&quot;, &quot;The International School of Moscow&quot;, &quot;http://www.internationalschool.ru/en/visual-tour/school-hub-video.aspx&quot;, &quot;The King&apos;s School Manila&quot;, &quot;http://www.kings.org.ph/en/visual-tour/school-hub-video.aspx&quot;, &quot;King&apos;s College Beijing&quot;, &quot;http://www.kingscollege.cn/en/visual-tour/school-hub-video.aspx&quot;, &quot;The British International School Yangon&quot;, &quot;http://www.britishschoolyangon.org/en/visual-tour/school-hub-video.aspx&quot;, &quot;Ukraine International School&quot;, &quot;http://www.ukraineinternationalschool.com/en/visual-tour/school-hub-video.aspx&quot;, &quot;http://www.britishschools.co.uk/school-hub-introduction&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact User School Hub Video Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_User_TimezoneSidKey__c</fullName>
        <formula>Main_Parent_File__r.User_TimezoneSidKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact User TimezoneSidKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_User_Timezone__c</fullName>
        <formula>Main_Parent_File__r.User_Timezone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact User Timezone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Current_Year_Tutor_Group_Regs__c</fullName>
        <label>Count Current Year Tutor Group Regs</label>
        <summaryFilterItems>
            <field>Registration__c.Is_Current_Year_Tutor_Group_Registration__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Registration__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Custom_Email_Filter_Contact__c</fullName>
        <formula>Main_Parent_File__r.Custom_Email_Filter_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Email Filter (Contact)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB_US_Format__c</fullName>
        <formula>TEXT(MONTH(Date_of_Birth__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(Date_of_Birth__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Date_of_Birth__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOB US Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>Admissions_File__r.Birth_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>TEXT(Contact_Nationality_Old__c)

/* Signup Form Link Removal */

/*OR(
   NOT(ISBLANK(Student_1_Kompanion_Full_Name__c)),
   NOT(ISBLANK(Student_2_Kompanion_Full_Name__c)),
   NOT(ISBLANK(Student_3_Kompanion_Full_Name__c)),
   NOT(ISBLANK(Student_4_Kompanion_Full_Name__c))
   )*/
   
/* Check SAFs Belongs to Correct School Mass Email Company */

/*AND(
    RecordType.DeveloperName = &quot;Student&quot;,
    Account.Company_School__c != SchoolText__c 
    )*/

/*AND(
    INCLUDES(ID_Tags_Created_For__c, &quot;2017/18&quot;),
TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c) +1),2) = &quot;2017/18&quot;
    )*/

/*AND (
    NOT(ISBLANK(Email)),
    RecordTypeId != &quot;0126F000001hVzl&quot;,
    RecordTypeId != &quot;0126F000001hVzk&quot;,
    OR(
       Family_Status__c = &quot;In School&quot;,
       Account.Family_Status__c = &quot;In School&quot;,
       AND(
           Family_Status__c = &quot;Future Enrolment&quot;,
           Starting_Date_from_parent__c &lt;= DATE(2017,04,24)
           ),
       AND(
           Account.Family_Status__c = &quot;Future Enrolment&quot;,
           Account.Starting_Date__c &lt;= DATE(2017,04,24)
           )
       )
    )*/

/* Add. Parents vs Family Files */

/*AND(
    RecordType.DeveloperName = &quot;Additional_Parent&quot;,
    SchoolText__c != &quot;The British School of Guangzhou&quot;,
    SchoolText__c != &quot;The British Schools Foundation&quot;,
    SchoolText__c != &quot;King&apos;s College Beijing&quot;,
    OR(
       AND(
           NOT(ISBLANK(Email)),
           OR(
              Email = Main_Parent_File__r.Email_1__c ,
              Email = Main_Parent_File__r.Copy_Alternate_Email__c  
              )
           ),
       AND(
           NOT(ISBLANK(Contact_Alternate_Email__c)),
           OR(
              Contact_Alternate_Email__c = Main_Parent_File__r.Email_1__c ,
              Contact_Alternate_Email__c = Main_Parent_File__r.Copy_Alternate_Email__c  
              )
           )
       )
    )*/

/* All Additional Parents W.Emails */

/*AND(
    RecordType.DeveloperName = &quot;Additional_Parent&quot;,
    OR(
       NOT(ISBLANK(Contact_Alternate_Email__c)),
       NOT(ISBLANK(Email))
       )
    )*/


/* Student Academic File Valid School, Owner, Mass Email Company, Family File &amp; Admissions File */

/*AND(
    RecordType.DeveloperName = &quot;Student&quot;,
    OR(
       CONTAINS(Student_Number__c, &quot;-&quot;),
       SchoolText__c != School__c,
       SchoolText__c != TEXT(Owner.School__c),
       SchoolText__c != TEXT(Account.School_Controlling_Picklist__c),
       Main_Parent_File__c != Admissions_File__r.AccountId
       )
    )*/</formula>
        <label>Deletion Prevention C</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Support Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAL_Start_Date__c</fullName>
        <formula>Admissions_File__r.EAL_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAL Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAL__c</fullName>
        <formula>IF(  Admissions_File__r.EAL_Status__c  =&quot;Current&quot;,&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Header__c</fullName>
        <formula>IF(
   SchoolText__c = &quot;The New York International School&quot;,
   &quot;World Class Education&quot;,
   &quot;Chartered by The British Schools Foundation&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Chatter_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A field used to control the &apos;UserPreferencesDisableAllFeedsEmail&apos; property of portal users via APEX.</description>
        <label>Enable Chatter Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolled_As_Of_Dashboard_Filter__c</fullName>
        <description>A year is considered &apos;entire&apos; if a student starts school before 1 October and leaves school after 1 June i.e. both the first and the last report of an academic year are usually included for the student.</description>
        <formula>IF(
   AND(
       Admissions_File__r.CloseDate &lt;= 
       DATE(YEAR(Admissions_File__r.Start_Date_Next_Fiscal_Year__c)-1,09,30),
       OR(
          Admissions_File__r.Leaving_Date__c &gt;= 
          DATE(YEAR(Admissions_File__r.Start_Date_Next_Fiscal_Year__c),06,01),
          ISBLANK(Admissions_File__r.Leaving_Date__c)
          )
       ),
   &quot;This Academic Year (Entire Year*)&quot;,    
   IF(
      AND(
          Admissions_File__r.CloseDate &lt;= 
          DATE(YEAR(Admissions_File__r.Start_Date_Next_Fiscal_Year__c)-2,09,30),
          OR(
             Admissions_File__r.Leaving_Date__c &gt;= 
             DATE(YEAR(Admissions_File__r.Start_Date_Next_Fiscal_Year__c)-1,06,01),
             ISBLANK(Admissions_File__r.Leaving_Date__c) 
             )
          ),
      &quot;Last Academic Year (Entire Year*)&quot;, 
      IF(
         AND(
             Admissions_File__r.CloseDate &lt;= 
             DATE(YEAR(Admissions_File__r.Start_Date_Next_Fiscal_Year__c)-3,09,30),
             OR(
                Admissions_File__r.Leaving_Date__c &gt;= 
                DATE(YEAR(Admissions_File__r.Start_Date_Next_Fiscal_Year__c)-1,06,01),
                ISBLANK(Admissions_File__r.Leaving_Date__c) 
                )
             ),
         &quot;Last Two Academic Years (Entire Period*)&quot;, 
         &quot;Not Defined&quot;
         )
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrolled As Of Dashboard Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_ID_Tag_Printing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from ID Tag Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Family_File_Has_Signup_Link__c</fullName>
        <formula>AND(
    RecordType.DeveloperName = &quot;Additional_Parent&quot;,
    NOT(ISBLANK(Main_Parent_File__r.PersonContact.Student_1_Kompanion_Full_Name__c))
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family File Has Signup Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_File_Name_and_Emails__c</fullName>
        <description>A temporary field used only to remove duplicate email addresses from within a single family via Connector. Can be deleted once clean-up and new trigger validation are in place.</description>
        <formula>&quot;Name: &quot;&amp; Main_Parent_File__r.FirstName &amp;&quot; &quot;&amp;Main_Parent_File__r.LastName &amp; BR() &amp;
&quot;Main Email: &quot;&amp; Main_Parent_File__r.Email_1__c &amp; BR() &amp;
&quot;Alternate Email: &quot;&amp; Main_Parent_File__r.Copy_Alternate_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family File Name and Emails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Grouping__c</fullName>
        <description>Used in some reports to group the family by the name of the first parent on the account i.e. the account name</description>
        <formula>IF(
   ISBLANK(RecordType.DeveloperName), 
   FirstName&amp;&quot; &quot;&amp;LastName&amp;&quot; (&quot;&amp;HYPERLINK(&quot;/&quot;&amp;Account.Id, Account.Id, &quot;_blank&quot;)&amp;&quot;)&quot;,
   Main_Parent_File__r.FirstName &amp;&quot; &quot;&amp; Main_Parent_File__r.LastName&amp;&quot; (&quot;&amp;HYPERLINK(&quot;/&quot;&amp;Main_Parent_File__r.Id, Main_Parent_File__r.Id, &quot;_blank&quot;) &amp;&quot;)&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Of</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Name__c</fullName>
        <description>The field that defines the name of the family in School Kompanion, relevant to the family UID</description>
        <formula>IF(
   NOT(ISBLANK(Main_Parent_File__c)),
   Main_Parent_File__r.LastName,
   &quot;&quot;
   )</formula>
        <label>Family Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Of_UID__c</fullName>
        <formula>IF( 
   ISBLANK(RecordType.DeveloperName), 
   CASESAFEID(Account.Id), 
   CASESAFEID(Main_Parent_File__r.Id)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Of (UID)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Status__c</fullName>
        <formula>Main_Parent_File__r.Family_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Status (Contact)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_UID__c</fullName>
        <description>The UID that links students and contacts in School Kompanion</description>
        <formula>IF(
   NOT(ISBLANK(Main_Parent_File__c)),
   Main_Parent_File__r.Family_UID__c,
   &quot;&quot;
   )</formula>
        <label>Family UID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follet_Group_Name__c</fullName>
        <formula>Tutor_Group__r.Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follet Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Address_Line_2__c</fullName>
        <description>Sent to pre-populate the invoicing information form. Required to encode characters that would otherwise cause the URL to break.</description>
        <formula>SUBSTITUTE(Address_Line_2__c, &quot;#&quot;, &quot;%23&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line 2 (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Apartment_Condominium_or_Communi__c</fullName>
        <description>Sent to pre-populate the invoicing information form. Required to encode characters that would otherwise cause the URL to break.</description>
        <formula>SUBSTITUTE(Address_Apartment_Condominium_or_Communi__c, &quot;#&quot;, &quot;%23&quot;)</formula>
        <label>Apartment/Condo or Comm Name (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Apartment_Unit_Number__c</fullName>
        <description>Sent to pre-populate the invoicing information form. Required to encode characters that would otherwise cause the URL to break.</description>
        <formula>SUBSTITUTE(Address_Apartment_Unit_Number__c, &quot;#&quot;, &quot;%23&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apartment/Unit Number (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_City__c</fullName>
        <description>Sent to pre-populate the invoicing information form. Required to encode characters that would otherwise cause the URL to break.</description>
        <formula>SUBSTITUTE(Address_City__c, &quot;#&quot;, &quot;%23&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_House_Building_Number__c</fullName>
        <description>Sent to pre-populate the invoicing information form. Required to encode characters that would otherwise cause the URL to break.</description>
        <formula>SUBSTITUTE(Address_House_Building_Number__c, &quot;#&quot;, &quot;%23&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>House/Building Number (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_State_Province__c</fullName>
        <description>Sent to pre-populate the invoicing information form. Required to encode characters that would otherwise cause the URL to break.</description>
        <formula>SUBSTITUTE(Address_State_Province__c, &quot;#&quot;, &quot;%23&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Street_Name__c</fullName>
        <description>Sent to pre-populate the invoicing information form. Required to encode characters that would otherwise cause the URL to break.</description>
        <formula>SUBSTITUTE(Address_Street_Name__c, &quot;#&quot;, &quot;%23&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Name (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Zip_Postal_Code__c</fullName>
        <description>Sent to pre-populate the invoicing information form. Required to encode characters that would otherwise cause the URL to break.</description>
        <formula>SUBSTITUTE(Address_Zip_Postal_Code__c, &quot;#&quot;, &quot;%23&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip/Postal Code (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name_on_Passport_Official_ID__c</fullName>
        <inlineHelpText>This name may not be 100% correct as it was taken from the old &apos;Name in Local Language&apos; field. Please double check the name if it is to be used on important documents.</inlineHelpText>
        <label>Full Name on Passport/Official ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__First_Volunteer_Date__c</fullName>
        <inlineHelpText>The first Volunteer Hours Start Date</inlineHelpText>
        <label>First Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Last_Volunteer_Date__c</fullName>
        <inlineHelpText>The latest Volunteer Hours End Date</inlineHelpText>
        <label>Last Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Unique_Volunteer_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Auto_Reminder_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Contact does not want to receive automatic reminder emails about their upcoming shifts.  Used in the &quot;Volunteer Hours Reminder Email&quot; workflow rule.</inlineHelpText>
        <label>Volunteer Auto-Reminder Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Availability__c</fullName>
        <label>Volunteer Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekdays</fullName>
                </value>
                <value>
                    <fullName>Weekends</fullName>
                </value>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Hours__c</fullName>
        <inlineHelpText>Total number of Hours that are Completed. Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Last_Web_Signup_Date__c</fullName>
        <inlineHelpText>The date of the most recent volunteer signup from the web.  Used to trigger workflow for notifications and thank you emails.</inlineHelpText>
        <label>Volunteer Last Web Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Manager_Notes__c</fullName>
        <inlineHelpText>Notes about the volunteer that the volunteer manager or organization staff want to record.</inlineHelpText>
        <label>Volunteer Manager Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Notes__c</fullName>
        <inlineHelpText>Notes from the volunteer.  Note that the web signup form appends the volunteers comments to this field.</inlineHelpText>
        <label>Volunteer Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Organization__c</fullName>
        <inlineHelpText>The organization, company, or group the contact is volunteering on behalf of.</inlineHelpText>
        <label>Volunteer Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
        <inlineHelpText>Select the skill(s) this contact has that should be used to find volunteer jobs.</inlineHelpText>
        <label>Volunteer Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Computer usage</fullName>
                </value>
                <value>
                    <fullName>Manual labor</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Status__c</fullName>
        <label>Volunteer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>New Sign Up</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender_Student__c</fullName>
        <formula>CASE(TEXT(Admissions_File__r.Gender__c), &quot;Male&quot;, &quot;M&quot;, &quot;Female&quot;, &quot;F&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender (Student)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This field is configured in NPSP Settings &gt; Relationships &gt; Relationships as the Gender field. Do not delete this field unless you remove the reference or select another Gender field there.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender_saf__c</fullName>
        <formula>TEXT(Admissions_File__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <description>Based on the indicative year group of the student which takes into account a number of variables</description>
        <formula>TEXT(YEAR(Admissions_File__r.Start_Next_Academic_Year__c)+17-Admissions_File__r.Student_Age_at_Last_Cut_off_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Half_Day__c</fullName>
        <formula>TEXT(Admissions_File__r.Half_Day_PN_N__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Half Day?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Active_SF_User__c</fullName>
        <formula>IF(AND(User__r.IsActive = TRUE, NOT(ISBLANK(User__c))), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Active SF User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Duplicate_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by means of a trigger if a duplicate email address is found on any other parent/guardian/additional contact within the same family. Subsequently triggers a validation rule to prevent save of the record.</description>
        <label>Has Duplicate Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Next_Year_ID_Tag__c</fullName>
        <formula>OR(
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2017/18&quot;), 
TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c) +1),2) = &quot;2017/18&quot; 
   ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2018/19&quot;), 
TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c) +1),2) = &quot;2018/19&quot; 
       ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2019/20&quot;), 
TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c) +1),2) = &quot;2019/20&quot; 
       ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2020/21&quot;), 
TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c) +1),2) = &quot;2020/21&quot; 
       ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2021/22&quot;), 
TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c) +1),2) = &quot;2021/22&quot; 
       ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2022/123&quot;), 
TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c) +1),2) = &quot;2022/23&quot; 
       ),
   AND( 
       INCLUDES(ID_Tags_Created_For__c, &quot;2023/24&quot;), 
TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c))&amp;&quot;/&quot;&amp;RIGHT(TEXT(YEAR($User.Start_Date_Next_Fiscal_Year__c) +1),2) = &quot;2023/24&quot; 
       )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Next Year ID Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Parent_User__c</fullName>
        <description>A field used in connector (or similar) to identify if a contact has a related user record with a profile = parent (used to distinguish between parent and staff member contacts)</description>
        <formula>IF(User__r.ProfileId = &quot;00e6F0000020GEY&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Parent User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Student_in_Campus_1_Contact__c</fullName>
        <formula>Main_Parent_File__r.Has_Student_in_Campus_1_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Student in Campus 1 (Contact)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Student_in_Campus_2_Contact__c</fullName>
        <formula>Main_Parent_File__r.Has_Student_in_Campus_2_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Student in Campus 2 (Contact)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>